--- a/src/app.html
+++ b/src/app.html
@@ -6,7 +6,7 @@
         <title>PinguSurMars's Website</title>
 		%sveltekit.head%
 	</head>
-	<body data-theme="cerberus" data-sveltekit-preload-data="hover" class="min-h-screen flex flex-col">
+	<body data-theme="cerberus" data-sveltekit-preload-data="hover" class="min-h-screen flex flex-col dark">
 		<div style="display: contents">%sveltekit.body%</div>
 	</body>
 </html>
