mass reformating to make stuff readable

--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,12 @@
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="utf-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>PinguSurMars's Website</title>
-		%sveltekit.head%
-	</head>
-	<body data-theme="cerberus" data-sveltekit-preload-data="hover" class="min-h-screen flex flex-col dark">
-		<div style="display: contents">%sveltekit.body%</div>
-	</body>
+<head>
+    <meta charset="utf-8"/>
+    <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <title>PinguSurMars's Website</title>
+    %sveltekit.head%
+</head>
+<body class="min-h-screen flex flex-col dark" data-sveltekit-preload-data="hover" data-theme="cerberus">
+<div style="display: contents">%sveltekit.body%</div>
+</body>
 </html>
