Add abuseipdb verification meta tag
Added abuseipdb verification meta tag to HTML head.

--- a/src/app.html
+++ b/src/app.html
@@ -3,6 +3,8 @@
 <head>
     <meta charset="utf-8"/>
     <meta content="width=device-width, initial-scale=1" name="viewport"/>
+    <meta name="abuseipdb-verification" content="qQbfv1uh" />
+    <!-- gosh I hate dns -->
     <title>PinguSurMars's Website</title>
     %sveltekit.head%
 </head>
